Script/Azure/Exercice/correction_networkPolicy_daemons/manifest-vote/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: result
  name: result
spec:
  type: LoadBalancer
  ports:
    - name: "result-service"
      port: 4000
      targetPort: 4000
  selector:
    app: result
