Script/Azure/Exercice/correction_networkPolicy_daemons/manifest-vote/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote
spec:

  type: LoadBalancer


  ports:
    - name: "vote-service"
      port: 80
      targetPort: 80
  selector:
    app: vote
