Script/Azure/Exercice/correction_networkPolicy_daemons/manifest-vote/network-policy-redis.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-policy
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            customer: redis
      ports:
        - protocol: TCP
          port: 6379
